create github pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  lang="fr">
+<html  >
 <head>
   
   <meta charset="UTF-8">
@@ -10,28 +10,25 @@
   <meta name="description" content="Obtenez le soutien dont vous avez besoin.
 Nous sommes à vos cotés, où que vous soyez">
   
-  
   <title>CoachingLAB.fr | Au service de votre réussite</title>
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-  
-
 </head>
 <body>
 
-<!-- Analytics -->
+<!-- Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P9BVT0FSP4"></script>
 <script>
@@ -41,10 +38,9 @@ Nous sommes à vos cotés, où que vous soyez">
 
   gtag('config', 'G-P9BVT0FSP4');
 </script>
-<!-- /Analytics -->
+<!-- /Google Analytics -->
 
 
-  
   <section class="menu cid-stjB9sImrc" once="menu" id="menu2-bu">
 
     
@@ -773,7 +769,7 @@ pour réaliser vos ambitions avec passion.<br></p>
     <div class="container">
         <div class="media-container-row">
 
-            <div class="card col-12 col-md-6 col-lg-4">
+            <div class="card  col-12 col-md-6 col-lg-4">
                 <div class="card-img">
                     <span class="mbr-iconfont mbri-responsive" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
@@ -787,7 +783,7 @@ pour réaliser vos ambitions avec passion.<br></p>
                 </div>
             </div>
 
-            <div class="card col-12 col-md-6 col-lg-4">
+            <div class="card  col-12 col-md-6 col-lg-4">
                 <div class="card-img">
                     <span class="mbr-iconfont mbri-rocket" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
@@ -802,7 +798,7 @@ pour réaliser vos ambitions avec passion.<br></p>
                 </div>
             </div>
 
-            <div class="card col-12 col-md-6 col-lg-4">
+            <div class="card  col-12 col-md-6 col-lg-4">
                 <div class="card-img">
                     <span class="mbr-iconfont mbri-globe-2" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
@@ -896,21 +892,19 @@ pour réaliser vos ambitions avec passion.<br></p>
 </section>
 
 
-<script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  
-</body>
+  </body>
 </html>
