--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@ au  07.69.74.63.90">
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5"><p><strong>
-                        </strong><a href="contact .html#header11-ak"></a><strong><b><a href="contact.html#header11-ak">ECRIVEZ MOI</a></b><br></strong><br></p></h4>
+                        </strong><a href="contact .html#header11-ak"></a><strong><b><a href="contact.html#header11-ak" class="text-info">ECRIVEZ MOI</a></b><br></strong><br></p></h4>
                     <p class="mbr-text mbr-fonts-style display-5">&nbsp;</p>
                 </div>
             </div>
@@ -191,7 +191,7 @@ au  07.69.74.63.90">
                     <div data-form-alert="" hidden="">Votre message a été transmis.
 Nous vous répondrons dans les meilleurs délais.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3uaA3tg6mwbzHqo4bJX723gwlKfhyEywnmzwhb0KhaG7dyRLlPEuVONWO5/7EcEY7vPxGKi4f7wH5qYwntSyh5Uj1gbwlpvrG8fTMyKFZTUFlY4xCLTz3oMT40yGwqLQ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n+BYFtAyAj9+IID7jEAqHoadD4KID5IeWY7TkG/GnEtdY9RRkdOF9LC6XM0oO70TVi2ekDiMMI6d/p0MH1Fy0v4qcQV7zjE3NSwkyAyol2DMNBjhyPk0APWINsF7zlWp">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
