create github pages

--- a/forward.html
+++ b/forward.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header1 cid-sswpmT4ZSF" id="header16-bf">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="header1 cid-sswpmT4ZSF" id="header16-bf">
 
     
 
@@ -150,7 +150,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OEJChSPZ6cEVsopTJ1HvAawlRCbNBnm5z9TCad3mUCytpySV8qvzYltt/5dOzx6JwaFCwttNBYMP9HEGXAnjUgXadHU8f+FxwJ8g+Nm5GfQQPDpFdU9puSfVzDAauQq7">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RidlVIQWgkQ0AqBYpJN8B0qGxKKGE1t1WZdcutm5Mc2za6JqaINixVBI2H0LY3TbmSGUXQ8M8PnEcYbtaGuTAExlsB72KgjvnLVE/Ck0z899U6uc2Knbc6RAJXr5Legc">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -251,6 +251,5 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
