--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Nous sommes à vos cotés, où que vous soyez">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="header3 cid-rOzW6ZEnmX mbr-parallax-background" id="header3-al">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header3 cid-rOzW6ZEnmX mbr-parallax-background" id="header3-al">
 
     
 
@@ -85,7 +85,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 75%;">
+            <div class="mbr-figure" style="width: 90%;">
                 <img src="assets/images/www.coachinglab.fr-1.gif" alt="Mobirise" title="">
             </div>
 
@@ -903,6 +903,5 @@ pour réaliser vos ambitions avec passion.<br></p>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
