--- a/offrez.html
+++ b/offrez.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-rOzRTgYgAR" id="footer1-aj">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="cid-rOzRTgYgAR" id="footer1-aj">
 
     
 
@@ -139,6 +139,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
