--- a/personnel.html
+++ b/personnel.html
@@ -76,7 +76,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="header11 cid-reLWUCXuC2" id="header11-96">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header11 cid-reLWUCXuC2" id="header11-96">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -473,6 +473,5 @@ leurs réussites en fonction de vos besoins.</p>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
