--- a/rdv.html
+++ b/rdv.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-rOnYIoqaRv" id="header16-a1">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-rOnYIoqaRv" id="header16-a1">
 
     
 
@@ -200,6 +200,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
