--- a/apropos.html
+++ b/apropos.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header1 cid-rQn4We8q1R" id="header16-be">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header1 cid-rQn4We8q1R" id="header16-be">
 
     
 
@@ -456,6 +456,5 @@ quelque soit l'endroit où vous vous trouvez.<br>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
