--- a/entreprise.html
+++ b/entreprise.html
@@ -77,7 +77,7 @@ pour innover et créer les succès futurs de votre entreprise .">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="header11 cid-reLWCZFBJg" id="header11-95">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="header11 cid-reLWCZFBJg" id="header11-95">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -362,6 +362,5 @@ Je propose un programme unique de coaching conseil dédié aux entreprises
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
