--- a/essai.html
+++ b/essai.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header1 cid-rDzfn0MxVB" id="header16-a5">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rDzfn0MxVB" id="header16-a5">
 
     
 
@@ -201,6 +201,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
