create github pages

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Nous sommes à vos cotés, où que vous soyez">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header3 cid-rOzW6ZEnmX mbr-parallax-background" id="header3-al">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="header3 cid-rOzW6ZEnmX mbr-parallax-background" id="header3-al">
 
     
 
@@ -85,7 +85,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 105%;">
+            <div class="mbr-figure" style="width: 85%;">
                 <img src="assets/images/www.coachinglab.fr-1.gif" alt="Mobirise" title="">
             </div>
 
